docs: complete v1.10 project research (Stack/Features/Architecture/Pitfalls/SUMMARY) .planning/research/ .planning/milestones/v1.9-research/